ecmascript/parser/tests/test262-error-references/fail/3558f8c0f0ba825b.js.stderr
error: Invalid access to super
 --> $DIR/tests/test262-parser/fail/3558f8c0f0ba825b.js:1:43
  |
1 | class A extends B { constructor() { (super).a(); } }
  |                                           ^

